--- a/src/Styles/SCSS/index.scss
+++ b/src/Styles/SCSS/index.scss
@@ -9,5 +9,8 @@
 @import '../../Components/CustomDrawer/Styles';
 @import '../../Components/Navbar/Styles';
 @import '../../Components/SADEK/Styles';
+@import '../../Components/Wedgets/Styles';
+
 
 // pages
+@import '../../Pages/Home/Styles';
