featuers and charts

--- a/src/Styles/SCSS/index.scss
+++ b/src/Styles/SCSS/index.scss
@@ -10,6 +10,8 @@
 @import '../../Components/Navbar/Styles';
 @import '../../Components/SADEK/Styles';
 @import '../../Components/Wedgets/Styles';
+@import '../../Components/Features/Styles';
+@import '../../Components/Charts/Styles';
 
 
 // pages
