--- a/src/Styles/SCSS/_variables.scss
+++ b/src/Styles/SCSS/_variables.scss
@@ -3,5 +3,7 @@ $purple: #7451f8;
 $gray1: #999;
 $gray2: #ddd;
 $gray3: #555;
+$red: crimson;
+$green: green;
 $offWhite: #ece8ff; 
 $transition: all 0.3s ease
