--- a/src/Styles/SCSS/_variables.scss
+++ b/src/Styles/SCSS/_variables.scss
@@ -4,6 +4,7 @@ $gray1: #999;
 $gray2: #ddd;
 $gray3: #555;
 $red: crimson;
-$green: green;
+$green: rgba(0,128,0,.2);
+$yellow: rgba(218,165,32,.2);
 $offWhite: #ece8ff; 
 $transition: all 0.3s ease
