--- a/src/Styles/SCSS/index.scss
+++ b/src/Styles/SCSS/index.scss
@@ -12,6 +12,7 @@
 @import '../../Components/Wedgets/Styles';
 @import '../../Components/Features/Styles';
 @import '../../Components/Charts/Styles';
+@import '../../Components/HomeTable/Styles';
 
 
 // pages
