complete user & user id page

--- a/src/Styles/SCSS/index.scss
+++ b/src/Styles/SCSS/index.scss
@@ -13,7 +13,10 @@
 @import '../../Components/Features/Styles';
 @import '../../Components/Charts/Styles';
 @import '../../Components/HomeTable/Styles';
+@import '../../Components/UsersTable/Styles';
+@import '../../Components/SingleCard/Styles';
 
 
 // pages
 @import '../../Pages/Home/Styles';
+@import '../../Pages/Single/Styles';
