--- a/src/Pages/Single/_Styles.scss
+++ b/src/Pages/Single/_Styles.scss
@@ -1,5 +1,5 @@
-.featuresAndCharts{
-    margin: 30px 0px;
+.single{
+    margin-bottom: 30px;
     display: flex;
     gap: 20px;
     @include xs{
@@ -10,15 +10,18 @@
         flex-direction: row;
         align-items: center;
     }
-    .features, .charts{
+    &-card, .charts{
         box-shadow: 1px 4px 12px -2px rgb(221 221 221 / 63%);
         border-radius: 20px;
         padding: 20px;
         width: 100%;
         height: 100%;
     }
+    &-card{
+        flex: 1;
+    }
 }
-.home-table{
+.single-user-table{
     box-shadow: 1px 4px 12px -2px rgb(221 221 221 / 63%);
     border-radius: 20px;
     padding: 20px;
