complete all pages..

--- a/src/Styles/SCSS/index.scss
+++ b/src/Styles/SCSS/index.scss
@@ -13,10 +13,12 @@
 @import '../../Components/Features/Styles';
 @import '../../Components/Charts/Styles';
 @import '../../Components/HomeTable/Styles';
-@import '../../Components/UsersTable/Styles';
+@import '../../Components/DataTable/Styles';
 @import '../../Components/SingleCard/Styles';
 
 
 // pages
 @import '../../Pages/Home/Styles';
+@import '../../Pages/List/Styles';
 @import '../../Pages/Single/Styles';
+@import '../../Pages/New/Styles';
