--- a/src/Components/SingleCard/_Styles.scss
+++ b/src/Components/SingleCard/_Styles.scss
@@ -18,21 +18,14 @@
     &-content{
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         
         img{
             object-fit: cover;
             flex: 1;
-            @include xs{
-                width: 100%;
-                border-radius: 20px;
-                height: 100%;
-            }
-            @include lg{
-                width: 100px;
-                border-radius: 50%;
-                height: 100px;
-            }
+            width: 100%;
+            border-radius: 20px;
+            height: 100%;
         }
         &-info{
             flex: 2;
@@ -42,7 +35,7 @@
             }
             h1{
                 color: $gray1;
-                margin-bottom: 20px;
+                margin: 20px 0px;
             }
             div{
                 span{
