end the front end, the rest is backend firebase

--- a/src/Components/DataTable/_Styles.scss
+++ b/src/Components/DataTable/_Styles.scss
@@ -1,6 +1,11 @@
 .users-data{
     height: 600px;
     width: 100%;
+    &>*{
+        &>*{
+            color: $black;
+        }
+    }
     &-user{
         display: flex;
         flex-direction: row;
