--- a/src/Components/HomeTable/_Styles.scss
+++ b/src/Components/HomeTable/_Styles.scss
@@ -1,4 +1,12 @@
 .table{
+    &>*{
+        background-color: $white;
+    }
+    .table-color{
+        &>*{
+            color: $black;
+        }
+    }
     &-product{
         display: flex;
         flex-direction: row;
