--- a/src/Components/Navbar/_Styles.scss
+++ b/src/Components/Navbar/_Styles.scss
@@ -2,6 +2,7 @@
     padding: 20px 0px;
     border-bottom: 1px solid #ddd;
     color: $gray3;
+    background-color: $white;
     .navbar-content{
         display: flex;
         align-items: center;
@@ -26,6 +27,8 @@
             }
             input{
                 border: 1px solid $gray1;
+                background-color: $white;
+                color: $black;
                 padding: 10px 5px;
                 border-radius: 5px;
             }
@@ -45,6 +48,7 @@
             gap: 20px;
             .navbar-icon{
                 cursor: pointer;
+                color: $gray3;
             }
             .navbar-lang{
                 display: flex;
@@ -56,6 +60,9 @@
             .websoket{
                 position: relative;
                 cursor: pointer;
+                .icon{
+                    color: $gray3;
+                }
                 span{
                     background-color: red;
                     color: $white;
