--- a/src/Pages/New/_Styles.scss
+++ b/src/Pages/New/_Styles.scss
@@ -15,6 +15,7 @@
     &-content{
        display: flex;
        gap: 20px;
+       margin-bottom: 110px;;
        @include xs{
         flex-direction: column;
        }
